appId: io.bitdrift.example.swiftapp.helloworld
---
- launchApp:
    arguments:
      bitdrift-initial-screen: crashes
- scrollUntilVisible:
    element:
      id: crash.fatal-error
    direction: DOWN
    centerElement: true
- tapOn:
    id: crash.fatal-error
- tapOn:
    id: crash.trigger-now
