appId: io.bitdrift.gradletestapp
---
- repeat:
    times: ${ITERATIONS}
    commands:
      - back
      - launchApp
      - tapOn: "App Exits"
      - tapOn: "Native Crash"
